--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Flask==3.0.0
 Flask-SQLAlchemy==3.1.1
 Flask-Login==0.6.3
 Flask-WTF==1.2.1
-psycopg[binary]==3.2.0  # Cambiado de psycopg2-binary a psycopg3
+psycopg2-binary==2.9.10
 python-dotenv==1.0.0
 gunicorn==21.2.0
 Werkzeug==3.0.1
