--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,9 @@ gunicorn==21.2.0
 Werkzeug==3.0.1
 Jinja2==3.1.6
 WTForms==3.1.1
-email-validator==2.1.0  # ¡IMPORTANTE! Para validación de emails
+email-validator==2.1.0
+# Weasyprint con versiones compatibles
 weasyprint==61.0
+cffi==1.17.1
 Pillow==10.4.0
-cffi==1.16.0
 cssselect2==0.7.0
